--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maison-guelmoussi",
+  "name": "copy-of-maison-guelmoussi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
