chore: Rename project and update metadata
Update package.json name from "copy-of-maison-guelmoussi" to "maison-guelmoussi".
Update metadata.json name from "Copy of Maison Guelmoussi" to "Maison Guelmoussi".
These changes standardize the project name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-maison-guelmoussi",
+  "name": "maison-guelmoussi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
